--- a/public/station/src/style.css
+++ b/public/station/src/style.css
@@ -9,11 +9,12 @@ mx
 
 html{
 	position: relative;
-	width: 640px;
+	width: 100%;
 	margin: 0;
 	padding: 0;
 }
 body{
+	position: relative;
 	margin: 0;
 	padding: 0;
 	background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAIAAAACUFjqAAAAP0lEQVQYlX3O0QkAQAgCUGsL99+txuh+giKu/JOHoJgZWkj2qoe5ux5W668lbwZAImKzeW0YST2s1l9L3gzAA9CaIMLQrLuAAAAAAElFTkSuQmCC);
@@ -43,19 +44,21 @@ h1{
 }
 .combination-selector{
 	position: relative;
-	width: 580px;
+	width: 90%;
 	height: 520px;
-	margin: 20px 40px;
+	margin: 3% 6%;
 }
 .group {
 	position: relative;
-	width: 500px;
-	height: 500px;
+	width: 100%;
+	height: 100%;
 }
 .group-container {
 	position: absolute;
 	top:0;
-	left: 60px;
+	right: 0;
+	width: 90%;
+	height: 100%;
 	/*-moz-box-shadow: 0 0 0 10px #000;
 	-webkit-box-shadow: 0 0 0 10px #000;
 	box-shadow: 0 0 0 10px #000;*/
@@ -69,7 +72,7 @@ h1{
 	position: absolute;
 	top:0;
 	left: 0;
-	width: 60px;
+	width: 10%;
 	height: 100%;
 }
 .tab  {
