--- a/public/station/src/style.css
+++ b/public/station/src/style.css
@@ -10,11 +10,14 @@ mx
 html{
 	position: relative;
 	width: 100%;
+	height: 100%;
 	margin: 0;
 	padding: 0;
 }
 body{
 	position: relative;
+	width: 100%;
+	height: 100%;
 	margin: 0;
 	padding: 0;
 	background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAIAAAACUFjqAAAAP0lEQVQYlX3O0QkAQAgCUGsL99+txuh+giKu/JOHoJgZWkj2qoe5ux5W668lbwZAImKzeW0YST2s1l9L3gzAA9CaIMLQrLuAAAAAAElFTkSuQmCC);
@@ -45,7 +48,7 @@ h1{
 .combination-selector{
 	position: relative;
 	width: 90%;
-	height: 520px;
+	height: 65%;
 	margin: 3% 6%;
 }
 .group {
