--- a/public/projection/src/style.css
+++ b/public/projection/src/style.css
@@ -251,3 +251,153 @@ body{
     top:0;
   }
 }
+/*
+ * Flavor Bars --------------------------------------------------------------------------------------
+ */
+.flavor-bars {
+	color: #fff;
+}
+.flavor-bars .bars{
+	position: absolute;
+	width: 1000px;
+}
+.flavor-bars .item{
+	position: relative;
+	width: 100%;
+	height: 30px;
+}
+.flavor-bars .bar{
+	position: absolute;
+	display: inline-block;
+	height: 100%;
+	border-radius: 30px;
+}
+.flavor-bars .name{
+	position: absolute;
+	left: -506px;
+	width: 500px;
+	display: inline-block;
+	height: 100%;
+	line-height: 100%;
+	text-align: right;
+	font-family: 'Quicksand';
+	text-transform: uppercase;
+	top: 0px;
+	font-size: 1.9em;
+	font-weight: 700;
+}
+.flavor-bars .bar{
+	opacity: 0;
+	-webkit-transform-origin: 0 50%;
+	-webkit-transform: scale3d(0,1,1);
+}
+.flavor-bars.during .bar{
+	opacity: 1;
+	-webkit-transform-origin: 0 50%;
+	-webkit-transform: scale3d(1,1,1);
+}
+.flavor-bars .name{
+	opacity: 0;
+}
+.flavor-bars.during .name{
+	opacity: 1;
+}
+.flavor-bars.show .name{
+	-webkit-animation-duration: 1.5s;
+	-webkit-animation-timing-function: ease-out;
+	-webkit-animation-name: flavor-bars-show-name;
+}
+.flavor-bars.show .bar{
+	-webkit-animation-duration: 1.5s;
+	-webkit-animation-timing-function: ease-out;
+	-webkit-animation-name: flavor-bars-show-bar;
+}
+.flavor-bars.hide .name{
+	-webkit-animation-duration: 1.5s;
+	-webkit-animation-timing-function: ease-in;
+	-webkit-animation-name: flavor-bars-hide-name;
+}
+.flavor-bars.hide .bar{
+	-webkit-animation-duration: 1.5s;
+	-webkit-animation-timing-function: ease-in;
+	-webkit-animation-name: flavor-bars-hide-bar;
+}
+@-webkit-keyframes flavor-bars-show-name {
+  0% {
+    opacity: 0;
+  }
+ 
+  100% {
+    opacity: 1;
+  }
+}
+@-webkit-keyframes flavor-bars-show-bar {
+  0% {
+  	opacity: 0;
+    -webkit-transform: scale3d(0,1,1);
+  }
+ 
+  50% {
+  	opacity: 1;
+  }
+
+  100% {
+  	 opacity: 1;
+    -webkit-transform: scale3d(1,1,1);
+  }
+}
+
+@-webkit-keyframes flavor-bars-hide-name {
+	0% {
+		opacity: 1;
+	}
+	100% {
+		opacity: 0;
+	}
+}
+@-webkit-keyframes flavor-bars-hide-bar {
+	0% {
+		opacity: 1;
+		-webkit-transform: scale3d(1,1,1);
+	}
+
+	50%{
+		opacity: 1;
+	}
+	100% {
+		opacity: 0;
+		-webkit-transform: scale3d(0,1,1);
+	}
+}
+
+
+/* Combination ranking --------------------------------------------------------------------------------------*/
+.combination-ranking .item .wrapper {
+	display: inline-block;
+	width: 450px;
+}
+.combination-ranking .item .wrapper:last-child {
+
+	margin-right: 0;
+}
+.combination-ranking .item .wrapper:nth-child(1) .image{
+	background-size: 85%;
+
+}
+.combination-ranking .item .image {
+	background-position: 50% 50%;
+	width: 100%;
+	height: 250px;
+	background-repeat: no-repeat;
+	
+}
+.combination-ranking .item .name {
+
+	display: block;
+width: 100%;
+text-align: center;
+color: #fff;
+font-size: 2em;
+font-family: 'Karla';
+text-transform: uppercase;
+}
