--- a/public/projection/src/style.css
+++ b/public/projection/src/style.css
@@ -57,7 +57,7 @@ body{
 	position: absolute;
 	top: 0;
 	left: 0;
-	height: 2px;
+	height: 1px;
 	width: 1px;
 	margin-top: -1px;
 	background-color: rgba(255,255,255,1);
@@ -384,7 +384,7 @@ body{
 }
 .combination-ranking .item  {
 	background-color: rgba(255,255,255,0.16);
-	border-radius: 201px;
+	/*border-radius: 201px;*/
 	padding: 10px 63px;
 	width: 2000px;
 	margin-bottom: 17px;
@@ -392,7 +392,7 @@ body{
 .combination-ranking h1{
 	color: #fff;
 
-font-family: Quicksand;
+font-family: Karla;
 text-transform: uppercase;
 text-align: center;
 font-size: 10em;
@@ -407,8 +407,8 @@ letter-spacing: 15px;
 .combination-ranking.positive h1:after{
 	content: ' ;D';
 }
-.combination-ranking.positive h1{
-	-webkit-animation-duration: 1s;
+.combination-ranking h1{
+	-webkit-animation-duration: 0.7s;
 	-webkit-animation-timing-function: ease-in;
 	-webkit-animation-name: blink-emoticon;
 	-webkit-animation-direction: alternate;
@@ -437,7 +437,7 @@ letter-spacing: 15px;
 	width: 100%;
 	text-align: center;
 	color: #fff;
-	font-size: 2em;
+	font-size: 3em;
 	font-family: 'Karla';
 	text-transform: uppercase;
 }
